# TLBB.Website-cppcms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.cmake.h  config.json  server  server.sh
app/: main.cpp
app/core/: model.cpp  model.h  provider.cpp  provider.h  router.cpp  router.h  view.cpp  view.h
app/http/controllers/: .controller.cpp.swp  controller.cpp  controller.h  dashboard_controller.cpp  dashboard_controller.h  home_controller.cpp  home_controller.h
app/models/: account.h
resources/views/: dashboard.h  dashboard.tmpl
resources/views/app/: app.tmpl
resources/views/dashboard/: register.h  register.tmpl
resources/views/layouts/: app.h  app.tmpl
resources/views/layouts/app/: dashboard.h  dashboard.tmpl  home.h  home.tmpl
routes/: api.cpp  api.h  web.cpp  web.h
